<resources>
    <string name="app_name">Dicoding Pokedex</string>
    <string name="title_activity_about">About</string>
    <string name="about_name">David Yappeter</string>
    <string name="about_email">davidyap11les@gmail.com</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="about">About</string>
    <string name="pokemon">Pokemon</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_pokemon_detail">PokemonDetail</string>
    <string name="pokemon_image">pokemon_image</string>
    <string name="base_xp">Base XP</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="double_colon">:</string>
    <string name="moves">Moves</string>
    <string name="abilities">Abilities</string>
    <string name="base_stats">Base Stats</string>
    <string name="type">type</string>
</resources>
